--- a/history.txt
+++ b/history.txt
@@ -72,3 +72,8 @@
 1.9.3
 - UTC datetime handling via UseUTCDateTime = true property 
 - added support for enum as key in dictionary
+
+1.9.4
+- ShowReadOnlyProperties added for exporting readonly properties (default = false)
+- if datetime value ends in "Z" then automatic UTC time calculated 
+- if using UTC datetime the output end in a "Z" (standards compliant) 
