--- a/history.txt
+++ b/history.txt
@@ -135,3 +135,10 @@
 - readonly property checking on deserialize (thanks to Slava Pocheptsov)
 - bug fix deserialize nested types with unit test (thanks to Slava Pocheptsov)
 - fix the silverlight4 project build (silverlight5 is not supported)
+
+2.0.4
+- fixed null objects -> returns "null" 
+- added sealed keyword to classes
+- bug fix SerializeNullValues=false and an extra comma at the end
+- UseExtensions=false will disable global types also
+- fixed parameters setting for Parse()
