--- a/history.txt
+++ b/history.txt
@@ -158,3 +158,7 @@
 - bug fix big number conversions 
 - * breaking change Parse will return longs and doubles instead of longs and decimals
 - ToObject on value types will auto convert the data (e.g ToObject<deciaml>() )
+
+2.0.9
+- added support for root level DataSet and DataTable deserialize (you have to do ToObject<DataSet>(...) )
+- added dataset tests
