--- a/history.txt
+++ b/history.txt
@@ -205,3 +205,8 @@
 - edge case empty array deserialize "[]" -> T[]
 - code cleanup
 - fixed serialize readonly properties
+
+2.0.19
+- fix dynamic objects and lists
+- fix deserialize Dictionary<T, List<V>> and Dictionary<T, V[]>
+- added tests for dictionary with lists
