--- a/history.txt
+++ b/history.txt
@@ -221,3 +221,11 @@
 2.0.21
 - fixed edge case tailing '\' in formatter
 - code cleanup formatter
+
+2.0.22
+- added .net 3.5 project
+- now compiling to 'output' directory
+- added signed assembly 
+- version numbers will stay at 2.0.0.0 for drop in compatibility
+- file version will reflect the build number
+- bug fix deserializing to dictionaries instead of dataset when type is not defined
