--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2.1.4
+- bug fix deserializing a struct property in a class
+
 2.1.3
 - added support for DateTime milliseconds 
 - added TestMilliseconds() test
