--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2.1.9
+- JSONParameters.SerializeNullValues = false handles Dictionary and NameValueCollection correctly
+
 2.1.8
 - bug fix serializing static fields and properties
 - skip indexer properties on objects (thanks to scymen)
