--- a/history.txt
+++ b/history.txt
@@ -1,5 +1,7 @@
-2.1.30
-- auto convert to string on deserialize if the object property is string and the json is not
+2.1.31
+- auto convert to string on deserialize if the object property is string and the json value is not
+- fixed side effect of changing JSONParameters.UsingGlobalTypes inside classes and affecting the original value
+- fixed deserialize nested Dictionary without extensions with generic ToObject<>
 
 2.1.29
 - added JSONParameters.AllowNonQuotedKeys for non standard javascript like json
