--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2.1.35
+- moved .net 3.5 project to own folder to mitigate conflicting obj builds
+- 
+
 2.1.34
 - ability to create internal/private objects (removed the public access restriction on classes)
 
