--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2.2.1
+- added JSONParameters.AutoConvertStringToNumbers to control the auto conversion, if false you will get an exception 
+- fixed file names in nuget package on linux 
+
 2.2.0
 - fixed json parser to create a decimal number if the string does not have an exponent
 - fixed fast creating lists without capacity constructor 
