--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2.2.3
+- bug fix deserialize Dictionary<int,List<X>> without extensions (thanks to Ondrej Medek)
+- bug fix deserialize Dictionary<int,X[]> without extensions 
+
 2.2.2
 - thread safe json formatter (thanks to Ondrej Medek)
 
